@@ -1,0 +1,7 @@
+#!/bin/sh
+
+CONTACTS="Manos Batsis <mbatsis@users.sourceforge.net>"
+MODE=rsync_ssh
+
+FROM=mavensync@shell.sourceforge.net:/home/groups/s/sa/sarissa/htdocs/repository/releases
+GROUP_DIR=gr/abiss
